drivers/card/K2616_Dll.h

int __stdcall K2616_Sle4428ReadProtectBit(HANDLE ComHandle, int _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_Sle4428Write(HANDLE ComHandle, int _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_Sle4428WriteP(HANDLE ComHandle, int _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_Sle4428ChangePWD(HANDLE ComHandle, BYTE _PWData[2]);
//++++++++++++++++++++++++++++++++++++++++++++++++++//

int __stdcall K2616_CPUTypeACardPowerOn(HANDLE ComHandle, BYTE szATR[16]);
int __stdcall K2616_CPUTypeAAPDU(HANDLE ComHandle, BYTE SCH, int _dataLen, BYTE _APDUData[], BYTE* RCH,BYTE _exData[], int *_exdataLen);
int __stdcall K2616_GetMachineIDNum(HANDLE ComHandle, BYTE *length, BYTE IDNum[]);
int __stdcall K2616_SetMachineIDNum(HANDLE ComHandle, BYTE length, BYTE IDNum[]);
int __stdcall K2616_TestCmd(HANDLE ComHandle);
int __stdcall K2616_SendCard(HANDLE ComHandle, BYTE _PM);
int __stdcall K2616_RecycleCard(HANDLE ComHandle, BYTE _PM);
int __stdcall K2616_CPUTypeACardPowerOn(HANDLE ComHandle, BYTE szATR[16]);
int __stdcall K2616_CPUTypeAAPDU(HANDLE ComHandle, BYTE SCH, int _dataLen, BYTE _APDUData[], BYTE* RCH,BYTE _exData[], int *_exdataLen);
int __stdcall K2616_GetMachineIDNum(HANDLE ComHandle, BYTE *length, BYTE IDNum[]);
int __stdcall K2616_SetMachineIDNum(HANDLE ComHandle, BYTE length, BYTE IDNum[]);
int __stdcall K2616_TestCmd(HANDLE ComHandle);
int __stdcall K2616_SelectPSE(HANDLE ComHandle);
int __stdcall K2616_ReadPSEDirFile(HANDLE ComHandle);
int __stdcall K2616_SelectADFFile(HANDLE ComHandle);
int __stdcall K2616_GPOCMD(HANDLE ComHandle);
int __stdcall K2616_ReadRecordFile(HANDLE ComHandle,int *len,BYTE *CardID);
int __stdcall K2616_ReadICCardNum(HANDLE ComHandle,int *len,BYTE *CardID);
int __stdcall K2616_CPUTypeASelectPSE(HANDLE ComHandle);
int __stdcall K2616_CPUTypeAReadPSEDirFile(HANDLE ComHandle);
int __stdcall K2616_CPUTypeASelectADFFile(HANDLE ComHandle);
int __stdcall K2616_CPUTypeAGPOCMD(HANDLE ComHandle);
int __stdcall K2616_CPUTypeAReadRecordFile(HANDLE ComHandle,int *len,BYTE *CardID);
int __stdcall K2616_CPUTypeAReadICCardNum(HANDLE ComHandle,int *len,BYTE *CardID);
int __stdcall K2616_CPUTypeAReadICCardNum(HANDLE ComHandle,int *len,BYTE *CardID);
int __stdcall K2616_ReadRetainCount(HANDLE ComHandle, int *Count);