apsp-client-sdk/src/test/java/com/zmcsoft/apsp/client/K2616_DllLibrary.java

	/**
	 * Original signature : <code>int K2616_Sle4428ReadProtectBit(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:180</i><br>
	 * @deprecated use the safer methods {@link #K2616_Sle4428ReadProtectBit(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, ByteBuffer)} and {@link #K2616_Sle4428ReadProtectBit(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_Sle4428ReadProtectBit(HANDLE ComHandle, int _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_Sle4428ReadProtectBit(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:180</i>
	 */
	int K2616_Sle4428ReadProtectBit(HANDLE ComHandle, int _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_Sle4428Write(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:181</i><br>
	 * @deprecated use the safer methods {@link #K2616_Sle4428Write(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, ByteBuffer)} and {@link #K2616_Sle4428Write(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_Sle4428Write(HANDLE ComHandle, int _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_Sle4428Write(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:181</i>
	 */
	int K2616_Sle4428Write(HANDLE ComHandle, int _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_Sle4428WriteP(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:182</i><br>
	 * @deprecated use the safer methods {@link #K2616_Sle4428WriteP(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, ByteBuffer)} and {@link #K2616_Sle4428WriteP(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_Sle4428WriteP(HANDLE ComHandle, int _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_Sle4428WriteP(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:182</i>
	 */
	int K2616_Sle4428WriteP(HANDLE ComHandle, int _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_Sle4428ChangePWD(HANDLE, BYTE[2])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:183</i><br>
	 * @deprecated use the safer methods {@link #K2616_Sle4428ChangePWD(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_Sle4428ChangePWD(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_Sle4428ChangePWD(HANDLE ComHandle, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_Sle4428ChangePWD(HANDLE, BYTE[2])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:183</i>
	 */
	int K2616_Sle4428ChangePWD(HANDLE ComHandle, ByteBuffer _PWData);
	/**
	 * ++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_CPUTypeACardPowerOn(HANDLE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:186</i><br>
	 * @deprecated use the safer methods {@link #K2616_CPUTypeACardPowerOn(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_CPUTypeACardPowerOn(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CPUTypeACardPowerOn(HANDLE ComHandle, Pointer szATR);
	/**
	 * ++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_CPUTypeACardPowerOn(HANDLE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:186</i>
	 */
	int K2616_CPUTypeACardPowerOn(HANDLE ComHandle, ByteBuffer szATR);
	/**
	 * Original signature : <code>int K2616_CPUTypeAAPDU(HANDLE, BYTE, int, BYTE[], BYTE*, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:187</i><br>
	 * @deprecated use the safer methods {@link #K2616_CPUTypeAAPDU(k2616_dll.K2616_DllLibrary.HANDLE, byte, int, ByteBuffer, ByteBuffer, ByteBuffer, IntBuffer)} and {@link #K2616_CPUTypeAAPDU(k2616_dll.K2616_DllLibrary.HANDLE, byte, int, Pointer, Pointer, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_CPUTypeAAPDU(HANDLE ComHandle, byte SCH, int _dataLen, Pointer _APDUData, Pointer RCH, Pointer _exData, IntByReference _exdataLen);
	/**
	 * Original signature : <code>int K2616_CPUTypeAAPDU(HANDLE, BYTE, int, BYTE[], BYTE*, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:187</i>
	 */
	int K2616_CPUTypeAAPDU(HANDLE ComHandle, byte SCH, int _dataLen, ByteBuffer _APDUData, ByteBuffer RCH, ByteBuffer _exData, IntBuffer _exdataLen);
	/**
	 * Original signature : <code>int K2616_GetMachineIDNum(HANDLE, BYTE*, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:188</i><br>
	 * @deprecated use the safer methods {@link #K2616_GetMachineIDNum(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer, ByteBuffer)} and {@link #K2616_GetMachineIDNum(k2616_dll.K2616_DllLibrary.HANDLE, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_GetMachineIDNum(HANDLE ComHandle, Pointer length, Pointer IDNum);
	/**
	 * Original signature : <code>int K2616_GetMachineIDNum(HANDLE, BYTE*, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:188</i>
	 */
	int K2616_GetMachineIDNum(HANDLE ComHandle, ByteBuffer length, ByteBuffer IDNum);
	/**
	 * Original signature : <code>int K2616_SetMachineIDNum(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:189</i><br>
	 * @deprecated use the safer methods {@link #K2616_SetMachineIDNum(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_SetMachineIDNum(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_SetMachineIDNum(HANDLE ComHandle, byte length, Pointer IDNum);
	/**
	 * Original signature : <code>int K2616_SetMachineIDNum(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:189</i>
	 */
	int K2616_SetMachineIDNum(HANDLE ComHandle, byte length, ByteBuffer IDNum);
	/**
	 * Original signature : <code>int K2616_TestCmd(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:190</i>
	 */
	int K2616_TestCmd(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_SendCard(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:191</i>
	 */
	int K2616_SendCard(HANDLE ComHandle, byte _PM);
	/**
	 * Original signature : <code>int K2616_RecycleCard(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:192</i>
	 */
	int K2616_RecycleCard(HANDLE ComHandle, byte _PM);
	/**
	 * Original signature : <code>int K2616_SelectPSE(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:201</i>
	 */
	int K2616_SelectPSE(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_ReadPSEDirFile(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:202</i>
	 */
	int K2616_ReadPSEDirFile(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_SelectADFFile(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:203</i>
	 */
	int K2616_SelectADFFile(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_GPOCMD(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:204</i>
	 */
	int K2616_GPOCMD(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_ReadRecordFile(HANDLE, int*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:205</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadRecordFile(k2616_dll.K2616_DllLibrary.HANDLE, IntBuffer, ByteBuffer)} and {@link #K2616_ReadRecordFile(k2616_dll.K2616_DllLibrary.HANDLE, IntByReference, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadRecordFile(HANDLE ComHandle, IntByReference len, Pointer CardID);
	/**
	 * Original signature : <code>int K2616_ReadRecordFile(HANDLE, int*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:205</i>
	 */
	int K2616_ReadRecordFile(HANDLE ComHandle, IntBuffer len, ByteBuffer CardID);
	/**
	 * Original signature : <code>int K2616_ReadICCardNum(HANDLE, int*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:206</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadICCardNum(k2616_dll.K2616_DllLibrary.HANDLE, IntBuffer, ByteBuffer)} and {@link #K2616_ReadICCardNum(k2616_dll.K2616_DllLibrary.HANDLE, IntByReference, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadICCardNum(HANDLE ComHandle, IntByReference len, Pointer CardID);
	/**
	 * Original signature : <code>int K2616_ReadICCardNum(HANDLE, int*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:206</i>
	 */
	int K2616_ReadICCardNum(HANDLE ComHandle, IntBuffer len, ByteBuffer CardID);
	/**
	 * Original signature : <code>int K2616_CPUTypeASelectPSE(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:208</i>
	 */
	int K2616_CPUTypeASelectPSE(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_CPUTypeAReadPSEDirFile(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:209</i>
	 */
	int K2616_CPUTypeAReadPSEDirFile(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_CPUTypeASelectADFFile(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:210</i>
	 */
	int K2616_CPUTypeASelectADFFile(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_CPUTypeAGPOCMD(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:211</i>
	 */
	int K2616_CPUTypeAGPOCMD(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_CPUTypeAReadRecordFile(HANDLE, int*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:212</i><br>
	 * @deprecated use the safer methods {@link #K2616_CPUTypeAReadRecordFile(k2616_dll.K2616_DllLibrary.HANDLE, IntBuffer, ByteBuffer)} and {@link #K2616_CPUTypeAReadRecordFile(k2616_dll.K2616_DllLibrary.HANDLE, IntByReference, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CPUTypeAReadRecordFile(HANDLE ComHandle, IntByReference len, Pointer CardID);
	/**
	 * Original signature : <code>int K2616_CPUTypeAReadRecordFile(HANDLE, int*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:212</i>
	 */
	int K2616_CPUTypeAReadRecordFile(HANDLE ComHandle, IntBuffer len, ByteBuffer CardID);
	/**
	 * Original signature : <code>int K2616_CPUTypeAReadICCardNum(HANDLE, int*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:213</i><br>
	 * @deprecated use the safer methods {@link #K2616_CPUTypeAReadICCardNum(k2616_dll.K2616_DllLibrary.HANDLE, IntBuffer, ByteBuffer)} and {@link #K2616_CPUTypeAReadICCardNum(k2616_dll.K2616_DllLibrary.HANDLE, IntByReference, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CPUTypeAReadICCardNum(HANDLE ComHandle, IntByReference len, Pointer CardID);
	/**
	 * Original signature : <code>int K2616_CPUTypeAReadICCardNum(HANDLE, int*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:213</i>
	 */
	int K2616_CPUTypeAReadICCardNum(HANDLE ComHandle, IntBuffer len, ByteBuffer CardID);
	/**
	 * Original signature : <code>int K2616_ReadRetainCount(HANDLE, int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:215</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadRetainCount(k2616_dll.K2616_DllLibrary.HANDLE, IntBuffer)} and {@link #K2616_ReadRetainCount(k2616_dll.K2616_DllLibrary.HANDLE, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_ReadRetainCount(HANDLE ComHandle, IntByReference Count);
	/**
	 * Original signature : <code>int K2616_ReadRetainCount(HANDLE, int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:215</i>
	 */
	int K2616_ReadRetainCount(HANDLE ComHandle, IntBuffer Count);
